--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -6,9 +6,25 @@
   <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <title>Brunch with ES6</title>
+  <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
 </head>
 <body>
-  <div id="app"></div>
+
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">Countries</a>
+    </div>
+  </nav>
+
+  <div id="app" class="container">
+
+    <ul id="countriesList" class="collection">
+      
+    </ul>
+
+  </div>
+
+
   <script src="/scripts/bundle.js"></script>
   <script>require('scripts/initialize');</script>
 </body>
