adding apple icon

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -9,10 +9,10 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Weather App">
-  <link rel="apple-touch-icon" href="images/globe-152.png">
+  <meta name="apple-mobile-web-app-title" content="PWA Countries">
+  <link rel="apple-touch-icon" href="/images/globe-152.png">
 
-  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+  <meta name="msapplication-TileImage" content="/images/globe-144.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
 
   <title>PWA Countries</title>
