--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -8,12 +8,14 @@
   <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#ee6e73">
   <meta name="apple-mobile-web-app-title" content="PWA Countries">
-  <link rel="apple-touch-icon" href="/images/globe-152.png">
+  <link rel="apple-touch-icon" href="images/globe-152-ios.png">
 
-  <meta name="msapplication-TileImage" content="/images/globe-144.png">
-  <meta name="msapplication-TileColor" content="#2F3BA2">
+  <meta name="msapplication-TileImage" content="images/globe-144.png">
+  <meta name="msapplication-TileColor" content="#ee6e73">
+
+  <meta name="theme-color" content="#ee6e73">
 
   <title>PWA Countries</title>
   <link rel="stylesheet" href="/styles/main.css" media="screen" title="no title" charset="utf-8">
